etc/iptables/iptables.rules
# Simple statefull IPv4 firewall for a single machine
# https://wiki.archlinux.org/index.php/Simple_stateful_firewall
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
# SSH:
#-A TCP -p tcp --dport 22 -j ACCEPT
# HTTP:
#-A TCP -p tcp --dport 80 -j ACCEPT
# HTTPS:
#-A TCP -p tcp --dport 443 -j ACCEPT
# DNS TCP:
#-A TCP -p tcp --dport 53 -j ACCEPT
# DNS UDP:
#-A UDP -p udp --dport 53 -j ACCEPT
COMMIT
